# aeva

./: .env.example  .gitignore  README.md  package-lock.json  package.json  pyproject.toml
backend/: agent_engine.py  emotion_system.py  file_access.py  llm_client.py  logger.py  memory_system.py  models.py  server.py  time_engine.py
data/: echo-save.json  echo.json  life_logs.json  memories.json
frontend/: index.html
frontend/css/: style.css
frontend/js/: app.js
public/: index.html
src/: index.ts
src/api/: router.ts
src/core/: agent.ts  echo.ts  memory.ts  time-engine.ts  types.ts
src/data/: store.ts
