[project]
name = "aeva"
version = "0.2.0"
description = "AEVA - 数字生命：一个会独自活着、有情感、有记忆、会成长的 AI"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "websockets>=13.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "dotenv>=0.9.9",
]

[dependency-groups]
dev = []
